# deepRAG

./: .env.sample  .env.template  .gitignore  Dockerfile.agent_service  Dockerfile.streamlit_app  README.md  deploy_azure.sh  docker-compose.yml  intercom_pages.jsonl  poetry.toml  product_agent.Dockerfile  product_chat.Dockerfile  product_ingestor.Dockerfile  pyproject.toml  requirements.txt  run_services.sh
.devcontainer/: devcontainer.json
.devcontainer/.infra/: graphDb.bicep  main.bicep  setup-vectorDb.ps1  vectorDb.bicep  webApp.bicep
.github/workflows/: codeql.yml  mirror.yml
data_ingestion/: batch_openai.jsonl  function_app.py  ingest_data_cosmos.py  ingest_intercom.py  ingest_notion.py  ingest_web.py  main.py  pdf_data_ingestor.py  product_mapping.yaml  requirements.txt  test_batch.py  test_query_data.py  utils.py  web_crawling_agent.py  web_screenshot.py
data_ingestion/execution/: ingestor.py
data_ingestion/legacy_code/: __init__.py  intercom.py  intercom_page.py  main_intercom.py  main_notion.py  notion.py  notion_page.py
data_ingestion/pipeline/: ingest_data_cosmos.py  test_query_data.py  utils.py  web_crawling_agent.py  web_screenshot.py
data_ingestion/processed_data/: extracted_content.jsonl
docs/: ARCHITECTURE.md  Example Taxonomy.md
infra/: command.txt
processed_data/: extracted_content.jsonl  extracted_data.jsonl
processed_data/pdf_images/: Northwind_Health_Plus_Benefits_Details_output.jsonl
src/: main.py
src/agents/: agent.py  agent_configuration.py  agent_manager.py  agents.py  pyproject.toml  smart_agent.py  test.py
src/agents/agent_profiles/: common_agent_profile.yaml  flight_agent_profile.yaml  generic_agent_profile.yaml  hotel_agent_profile.yaml  human_agent_profile.yaml  ta_agent_profile.yaml  tsm_agent_profile.yaml
src/agents/smart_agent/: prompt.yaml  smart_agent.py
src/agents/tools/: flight_agent_tools.py  hotel_agent_tools.py  ta_agent_tools.py  tools.py  tsm_agent_tools.py
src/api/: agent_service.py  api.py  main.py  pyproject.toml
src/app/: app.py  copilot.py  pyproject.toml
src/distributed_cache/: cache.py  distributed_cache.py  pyproject.toml
src/functions/: functions.py  pyproject.toml  search_vector_function.py
src/ingestion/: README.md
src/models/: agent_configuration.py  agent_response.py  models.py  pyproject.toml  settings.py
src/runnables/cypher_generation/: README.md  generate_cypher.py
src/runnables/deep_retrieval/: retriever.py
src/runnables/graph_retrieval/: README.md  graph_retriever.py
src/runnables/intent_extraction/: README.md  get_intent.py
src/runnables/multi_query/: README.md  generate_queries.py
src/runnables/vector_retrieval/: README.md  retriever.py  vector_retriever.py
src/server/: __main__.py  app.py
src/services/: history.py  pyproject.toml  services.py
src/tests/: server_tests.py
src/utils/: create_cache_index.py  io_wrapper.py  pyproject.toml  session_state.py  smart_agent_factory.py  utilities.py  utility.py  utils.py
tests/: pyproject.toml  test_api.py  test_chain.py  test_search_vector_function.py  test_server.py  test_smart_agent.py  test_vectors.py  tests.py
