[tool.poetry]
name = "deepRAG"
version = "0.1.0"
description = "RAG enhanced though multiple search types."
authors = ["Tyler Kendrick <tkendrick@microsoft.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
api = { path = "./src/api", develop = true }
app = { path = "./src/app", develop = true }
tests = { path = "./tests", develop = true }

[tool.poetry.group.dev.dependencies]
langchain-cli = "^0.0.25"
pytest = "^8.2.2"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
    "src",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
