[tool.poetry]
name = "tests"
version = "0.1.0"
description = "RAG enhanced though multiple search types."
authors = ["Tyler Kendrick <tkendrick@microsoft.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
api = { path = "../src/api", develop = true }

[tool.poetry.group.dev.dependencies]
env = "^0.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "../src",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
