[tool.poetry]
name = "tests"
version = "0.1.0"
description = "RAG enhanced though multiple search types."
authors = ["Tyler Kendrick <tkendrick@microsoft.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
api = { path = "../src/api", develop = true }
models = { path = "../src/models", develop = true }
utils = { path = "../src/utils", develop = true }
agents = { path = "../src/agents", develop = true }
distributedcache = { path = "../src/distributed_cache", develop = true }
services = { path = "../src/services", develop = true }
sse-starlette = "^2.1.3"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
env = "^0.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "../src",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
