[tool.poetry]
name = "app"
version = "0.1.0"
description = "RAG enhanced though multiple search types."
authors = ["Tyler Kendrick <tkendrick@microsoft.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit-extras = "^0.4.3"
fsspec = "^2024.6.1"
models = { path = "../models", develop = true }
agents = { path = "../agents", develop = true }
functions = { path = "../functions", develop = true }
utils = { path = "../utils", develop = true }
pydantic-settings = "^2.4.0"
plotly = "^5.23.0"

[tool.poetry.group.dev.dependencies]
env = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
