[tool.poetry]
name = "functions"
version = "0.1.0"
description = ""
authors = ["Tyler Kendrick <145080887+Tyler-R-Kendrick@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.37.1"
azure-search-documents = "^11.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
