[tool.poetry]
name = "models"
version = "0.1.0"
description = "Models for the app"
authors = ["Tyler Kendrick"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.4.0"
openai = "^1.37.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
